# bicudo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bicudo.sublime-project  bicudo.sublime-workspace
dev/: equations.txt
include/bicudo/: bicudo.hpp
include/bicudo/api/: base.hpp  rocm.hpp
include/bicudo/gpu/: algebra_linear.hpp  content.hpp  model.hpp  rocm_model.hpp  rocm_platform.hpp  types.hpp
include/bicudo/physics/: collision_info.hpp  placement.hpp  processor.hpp  simulator.hpp  types.hpp
include/bicudo/util/: log.hpp  math.hpp
include/bicudo/world/: camera.hpp  object.hpp
include/bicudo/world/management/: world_manager.hpp
include/bicudo/world/physics/: simulator.hpp
meow/: CMakeLists.txt
meow/src/: main.cpp  meow.cpp  meow.hpp
meow/src/gpu/: renderer.cpp  renderer.hpp
meow/src/graphics/: immediate.cpp  immediate.hpp
meow/src/tools/: camera.cpp  camera.hpp  pickup.cpp  pickup.hpp
src/: bicudo.cpp
src/api/: rocm.cpp
src/bicudo/: bicudo.cpp  bicudo.hpp
src/bicudo/gpu/: model.cpp  model.hpp  renderer.cpp  renderer.hpp  rocm.hpp  types.hpp
src/bicudo/graphics/: immediate.cpp  immediate.hpp
src/bicudo/util/: log.cpp  log.hpp  math.cpp  math.hpp
src/bicudo/world/: object.cpp  object.hpp  types.hpp
src/bicudo/world/management/: world_manager.cpp  world_manager.hpp
src/bicudo/world/physics/: simulator.cpp  simulator.hpp
src/client/: client.hpp  main.cpp
src/client/tools/: pickup.cpp  pickup.hpp
src/gpu/: model.cpp  rocm_model.cpp
src/physics/: placement.cpp  processor.cpp  simulator.cpp
src/util/: log.cpp  math.cpp
src/world/: camera.cpp  object.cpp
src/world/management/: world_manager.cpp
src/world/physics/: simulator.cpp
